1998-06-02  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* gnome-mdi.c (app_set_active_view): a few more fixes, I hope it works
	OK now.

1998-06-01  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* gnome-mdi.c: changed to use new gnome_app_insert_menus() and
	gnome_app_remove_menus() routines.
	* gnome-document.[ch]: added GnomeUIInfo support for menu creation via
	menu_template member and gnome_document_set_menu_template().
	* hex-document.c: changed to use GnomeUIInfo support.
	
1998-05-31  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* gnome-mdi.c: added images to Dnd cursors. The widges are global vars,
	but I'm not sure whether this is a good solution.
	
1998-05-28  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* gnome-mdi.[ch]: cleaned the code up a bit and added toolbar creation
	support.
	* gnome-document.c: added default document_changed signal handler to
	GnomeDocument, so that derived classes need not take care of it.
	* hex-document.c: removed document_changed signal handler because the
	default one in the parent class serves its purpose.
	* ui.c: changed to accomodate clean-ups in gnome-mdi.c

1998-05-27  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* ui.c: use the new GNOME_APP_UI_JUSTIFY_RIGHT tag to right-justify the
	help menu.
	
1998-05-26  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* gnome-mdi.c (gnome_mdi_remove_*): all these functions now have an extra
	argument force, which if set to TRUE prevents emission of REMOVE_DOCUMENT
	or REMOVE_VIEW signals and makes removing always successful.
	* gnome-mdi.c: rewritten most of the GnomeApp delete_event handling code,
	which SIGSEGV's no more.
	* callbacks.c: fixed callbacks to work with the changed gnome_mdi_remove_*
	functions.
	* gnome-mdi.c: added copy_ui_info_tree() and free_ui_info_tree()
	functions that copy the whole tree structure of GnomeUIInfo.
	* gnome-mdi.h: added menu_template and toolbar_template members
	to GnomeMDI. They store pointer to a template GnomeUIInfo structure