@@ -50,19 +50,28 @@ int main(int argc, char **argv) {
   if(!just_exit) {
     mdi = gnome_mdi_new("ghex", "GNOME hex editor");
 
+    /* set up MDI menus */
 #ifdef USE_APP_HELPER
     gnome_mdi_set_menu_template(mdi, main_menu);
 #else
     gtk_signal_connect(GTK_OBJECT(mdi), "create_menus", GTK_SIGNAL_FUNC(create_mdi_menus), NULL);
 #endif
 
+    /* and document menu and document list paths */
+    gnome_mdi_set_document_menu_path(mdi, "File");
+    gnome_mdi_set_document_list_path(mdi, "View");
+
+    /* connect signals */
     gtk_signal_connect(GTK_OBJECT(mdi), "remove_document", GTK_SIGNAL_FUNC(remove_doc_cb), NULL);
     gtk_signal_connect(GTK_OBJECT(mdi), "destroy", GTK_SIGNAL_FUNC(cleanup_cb), NULL);
 
+    /* load preferences */
     load_configuration();
 
+    /* set MDI mode */
     gnome_mdi_set_mode(mdi, mdi_mode);
 
+    /* and here we go... */
     gtk_main();
   }
 
